# notification_service

./: Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
architecture/: tobeC4.puml
env/: .env.prod  .env.test
nginx/conf.d/: site.conf
src/: Dockerfile  entrypoint.sh  main.py
src/api/v1/: events.py  notification.py
src/core/: logger.py  settings.py
src/db/: rabbit.py  redis.py
src/grpc_src/service/: helpers.py
src/model/: events.py  notifications.py  stored_note.py
src/scheduler/: scheduler.py
src/service/: auth_service.py  cron_service.py  mongo_service.py  notification.py  template_service.py
websocket_notification_app/: Dockerfile  app.py  entrypoint.sh  setup.cfg
websocket_notification_app/api/v1/: create_connection.py  notification.py  schemas.py
websocket_notification_app/core/: settings.py
websocket_notification_app/grpc_src/service/: helpers.py
websocket_notification_app/nginx/: nginx.conf
websocket_notification_app/nginx/conf.d/: site.conf
websocket_notification_app/services/: notification_service.py
